@@ -112,14 +112,14 @@ if {![info exists gurka]} {
     lappend apa [file join [pwd] syntaxdb.tcl]
     eval lappend apa [glob -nocomplain [file join [pwd] syntaxdb*.tcl]]
 
-    lappend apa [file join $thisDir syntaxdb.tcl]
-    eval lappend apa [glob -nocomplain [file join $thisDir syntaxdb*.tcl]]
+    lappend apa [file join $::dbDir syntaxdb.tcl]
+    eval lappend apa [glob -nocomplain [file join $::dbDir syntaxdb*.tcl]]
 
     foreach file $apa {
         if {[file isfile $file] && [file readable $file] && \
                 [lsearch $::Nagelfar(allDb) $file] == -1} {
             lappend ::Nagelfar(allDb) $file
-            if {[file dirname $file] == $::thisDir} {
+            if {[file dirname $file] == $::dbDir} {
                 lappend ::Nagelfar(allDbView) "[file tail $file] (app)"
             } else {
                 lappend ::Nagelfar(allDbView) [fileRelative [pwd] $file]
