@@ -1,3 +1,6 @@
+2011-11-26
+ Made it possible to customize how Nagelfar is installed.
+
 2011-10-15
  Corrected some trace sub commands in syntax database.
 
